<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_texture" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/exer_pacman_red"
        android:paddingTop="20dip"
        android:paddingBottom="20dip"
        android:text="@string/exer_pacman_ack_title"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingTop="5dip"
        android:text="@string/exer_pacman_ack_dev_title"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:paddingTop="5dip"
        android:text="@string/exer_pacman_ack_dev_1"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:paddingTop="2dip"
        android:text="@string/exer_pacman_ack_dev_2"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingTop="15dip"
        android:text="@string/exer_pacman_ack_alg_title"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:paddingTop="5dip"
        android:text="@string/exer_pacman_ack_alg_content"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingTop="15dip"
        android:text="@string/exer_pacman_ack_img_title"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:paddingTop="5dip"
        android:text="@string/exer_pacman_ack_img_content"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingTop="15dip"
        android:text="@string/exer_pacman_ack_sound_title"
        android:background="@android:color/transparent" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:paddingTop="5dip"
        android:text="@string/exer_pacman_ack_sound_content"
        android:background="@android:color/transparent" />
    
</LinearLayout>