<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Assignment1" 
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/txt_phone_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="57dp"
        android:gravity="center"
        android:text="@string/txt_phone_unique_id_activity_team_member"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_designer_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_phone_ID"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/txt_designer_email_activity_team_member"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_designer_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_designer_email"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/txt_designer_name_activity_team_member"
        android:textAlignment="center"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_above="@+id/txt_designer_name"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:src="@drawable/headshot" 
        android:contentDescription="@string/img_description_activity_team_member"/>

</RelativeLayout>