<?xml version="1.0" encoding="utf-8"?>
<!-- 


 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="30dip"
    android:background="@drawable/background"
    tools:context=".Assignment1" >

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_error"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:text="@string/btn_exit_activity_assignment1" />

    <Button
        android:id="@+id/btn_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_exit"
        android:layout_alignLeft="@+id/btn_team_members"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_error_check_activity_assignment1" />

    <Button
        android:id="@+id/btn_boggle_game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_error"
        android:layout_alignLeft="@+id/btn_error"
        android:layout_marginBottom="20dp"
        android:text="Boggle Game" />

    <Button
        android:id="@+id/btn_team_members"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_sudoku_game"
        android:layout_marginBottom="19dp"
        android:text="@string/btn_team_member_activity_assignment1" />

    <Button
        android:id="@+id/btn_sudoku_game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_boggle_game"
        android:layout_alignLeft="@+id/btn_team_members"
        android:layout_marginBottom="27dp"
        android:text="@string/btn_sudoku_activity_assignment1" />

</RelativeLayout>